prometheus-msteams/templates/deployment.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels", "podAntiAffinity")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.app
  namespace: #@ data.values.namespace
  labels: #@ labels()
spec:
  selector:
    matchLabels: #@ labels()
  replicas: #@ data.values.msteams.replicas
  template:
    metadata:
      labels: #@ labels()
    spec:
      serviceAccountName: #@ data.values.app
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
      affinity: #@ podAntiAffinity()
      containers:
      - name: msteams
        image: #@ data.values.msteams.image
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
        ports:
        - name: http
          containerPort: 2000
          protocol: TCP
        args:
        - -config-file=/etc/config/connectors.yml
        - -template-file=/etc/template/card.tmpl
        resources:
          requests:
            memory: "16Mi"
            cpu: "10m"
          limits:
            memory: "32Mi"
            cpu: "25m"
        readinessProbe:
          httpGet:
            path: /config
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /config
            port: http
          initialDelaySeconds: 10
          periodSeconds: 30
        volumeMounts:
        - name: #@ data.values.app + "-config"
          mountPath: /etc/config
        - name: #@ data.values.app + "-card-template"
          mountPath: /etc/template
      volumes:
      - name: #@ data.values.app + "-config"
        secret:
          secretName: #@ data.values.app + "-config"
      - name: #@ data.values.app + "-card-template"
        configMap:
          name: #@ data.values.app + "-card-template"
